2007-07-04  Hector E. Gomez Morales. <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Minor changes.

2007-07-04  Hector E. Gomez Morales. <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs, DocumentTagTable.cs: Following Mono Coding
	  Guidelines for switch cases.

2007-07-04  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentTagTable.cs: Added all the Monodoc tags that where left to be
	  added.

2007-07-04  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/Examples/TreeView.xml, Monodoc.Editor.Gui.mdp: Added
	  TreeView.xml for use in test units.
	* DocumentBufferArchiver.cs: Added GetArrays that initializes two
	  ArrayLists: beginTags and endTags. Checks the last item in the
	  array from the tags property of the TextIter. We only need to check
	  if the last tag begins or ends in the iter to initialize the two
	  lists. We use the dynamic tag padding-invisible to insert it when
	  we need some padding. I moved the dyamic creation of the tag in
	  DeserializeAttributes so the priority order is correct ie
	  Attributes < InvidualAttributes.
	* DocumentTagTable.cs: Added a new dynamic tag that represents any
	  padding that is invisible to the user.

2007-07-03  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/Examples/Convert.xml, Test/Examples/Widget.xml,
	  Monodoc.Editor.Gui.mdp: Added Convert.xml and Widget.xml for use in
	  unit tests.

2007-07-03  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/TestDocumentBufferArchiver.cs: Some changes to test units
	  because the major changes in DocumentTagTable.
	* DocumentBufferArchiver.cs: Modified Serialize so that it takes in
	  account the suffix '#[0-9]*" that dynamics can have, modified
	  deserialize to create dynamic tags if the element is dynamic. To
	  minimize the creation of dynamic tags we try to reuse previous
	  dynamic tags that maintains the priority if not we create another
	  dynamic tag.
	* DocumentTagTable.cs: Removed singleton pattern because we now need a